Fix user online icon spacing

--- a/packages/core/less/forum/Post.less
+++ b/packages/core/less/forum/Post.less
@@ -50,10 +50,11 @@
   }
 
   .UserOnline {
+    margin-right: 5px;
+
     & .icon {
       font-size: 12px;
     }
-
     & .fa-circle {
       color: @online-user-circle-color;
     }
